# fullstack-rust-example

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
client/: Cargo.toml  build.rs
client/.cargo/: config.toml
client/src/: lib.rs  lib_native.rs  lib_wasm.rs  model.rs
client/src/components/: list_application.rs  mod.rs  new_application.rs
client/tests/: test.rs
client/tests/native/: mod.rs
client/tests/wasm/: mod.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
