[workspace]
members = [
    "client",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ben Cordero <bencord0@condi.me>"]

[workspace.dependencies]
axum = "0.5.17"
include_dir = "0.7.3"
mime_guess = "2.0.4"
tokio = { version = "1", features = ["full"] }
wasm-bindgen = "0.2.83"
yew = "0.19.3"
